2006-12-03  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.c, data/filetypes.cpp, data/filetypes.d,
   data/filetypes.ferite, data/filetypes.java, src/highlighting.c:
   Added new style for doc keyword error and added some doc key words
   for Doxygen and Javadoc.
 * geany.glade, src/geany.h, src/interface.c, src/keyfile.c,
   src/prefs.c, src/sci_cb.c:
   Added new preference to unfold all children of a fold point if the
   fold point is unfolded.
 * src/msgwindow.c: Applied patch from Bob Doan to ignore libtool
                    messages when parsing the output of make (thanks).
 * src/sci_cb.c, src/sci_cb.h:
   Made handle_xml() static.
   Fixed wrong XML auto completion in PHP files when inserting '>',
   thanks to Bob Doan for reporting.


2006-12-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/highlighting.c: Use the same style for unknown doc keywords
                       (/** @something */) as for known keywords.


2006-12-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c, src/geany.h, src/main.c,
   src/ui_utils.c:
   Removed invisible place holder menu item in recent files menu.
   Create separate sub menu for the recent files menu in the toolbar to
   prevent GTK warnings when using GTK >= 2.10.


2006-12-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/vte.c:
   Make the switch to vte menu shortcut override work before the VTE
   has been realized.


2006-11-30  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/main.c:
   Disable open toolbutton recent files menu for now because on
   GTK+2.10 packing the recent files menu twice causes warnings.
 * src/build.c, src/build.h, src/keybindings.c, src/callbacks.c,
   src/filetypes.c, src/filetypes.h, src/dialogs.c:
   Make all filetypes except LaTeX use the same build menu, disabling
   any items that don't apply for the current document.
   Move BuildMenuItems struct type to build.h.

