@@ -1,3 +1,9 @@
+2006-12-04  Enrico Tröger  <enrico.troeger@uvena.de>
+
+ * src/document.c: Use default GTK foreground colour for filenames on
+                   notebook tabs instead of hardcoded colour black.
+
+
 2006-12-03  Enrico Tröger  <enrico.troeger@uvena.de>
 
  * data/filetypes.c, data/filetypes.cpp, data/filetypes.d,
